@@ -1,3 +1,8 @@
+2009-08-04  Dodji Seketeli  <dodji@redhat.com>
+
+	PR debug/39706
+	* g++.dg/debug/dwarf2/pubnames-1.C: New test.
+
 2009-08-04  Release Manager
 
 	* GCC 4.3.4 released.
